src/objects/Document_Checklist_Header__c.object
<CustomObject>
    <description>The container object for storing all the rejected document checklist recrods.</description>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Document Checklist Headers</relationshipLabel>
        <relationshipName>Document_Checklist_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Rejection_L2__c</fullName>
        <label>Reason For Rejection L2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Remarks__c</fullName>
        <label>Additional Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Document Checklist Header</label>
    <nameField>
        <label>Document Checklist Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklist Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>